kubernetes/gateway-api/envoy/12-securitypolicy-basicauth.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: go-route-basicauth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: go-route
  basicAuth:
    users:
      name: "basic-auth"
