kubernetes/gateway-api/envoy/13-securitypolicy-apiauth.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: go-route-apikeyauth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: go-route
  apiKeyAuth:
    credentialRefs:
    - group: ""
      kind: Secret
      name: go-svc-secret
    extractFrom:
    - headers:
      - x-api-key
